5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1708_3063.log
== TEST (2019-04-29 14:09:35) 
-- CODE:
q=int(input("Digite a quantidade: "))
a=input("Digite a armadura: "().upper)
f=("Digite o fator: ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a=input("Digite a armadura: "().upper)
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:09:52) 
-- CODE:
q=int(input("Digite a quantidade: "))
a=input("Digite a armadura: ".upper)
f=("Digite o fator: ")

-- OUTPUT:
<built-in method upper of str object at 0x7f3e78df47c8>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:11:02) 
-- CODE:
q=int(input("Digite a quantidade: "))
a=input("Digite a armadura: ".upper)
f=("Digite o fator: ")

-- OUTPUT:
<built-in method upper of str object at 0x7fd7c57857c8>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:11:21) 
-- CODE:
q=int(input("Digite a quantidade: "))
a=input("Digite a armadura: ").upper
f=("Digite o fator: ")

-- OUTPUT:
<built-in method upper of str object at 0x7fd7c57857c8>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:11:42) 
-- CODE:
q=int(input("Digite a quantidade: "))
a=input("Digite a armadura: ").upper
f=input("Digite o fator: ")

-- OUTPUT:
<built-in method upper of str object at 0x7fd7c57857c8>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:38) 
-- CODE:
q=int(input("Digite a quantidade: "))
a=input("Digite a armadura: ").upper
d=input("Digite o fator: ")
if()

-- ERROR:
File "XXXX", line 4
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:43) 
-- CODE:
q=int(input("Digite a quantidade: "))
a=input("Digite a armadura: ").upper
d=input("Digite o fator: ")


-- ERROR:
File "XXXX", line 4
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:52:41) 
-- CODE:
q=int(input("Digite a quantidade: "))
a=input("Digite a armadura: ").upper()
d=input("Digite o fator: ")
if(a==)


-- ERROR:
File "XXXX", line 4
    if(a==)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:53:06) 
-- CODE:
q=int(input("Digite a quantidade: "))
a=input("Digite a armadura: ").upper()
d=input("Digite o fator: ")


-- ERROR:
File "XXXX", line 4
    if(a==)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
